# ToxScreen

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
api/: config.py  filters.py  logging_config.py  main.py  moderation.py  rewrite.py  schemas.py  vllm_client.py
api/tests/: test_health.py  test_moderate.py  test_rewrite_safe_mock.py
classifier/: dataset.py  eval.py  metrics.py  model.py  train.py
data/: slurs.txt
infra/: Dockerfile.api  Dockerfile.vllm
scripts/: eval_rewrite.py  smoke_test.sh  test_classifier.py
